<resources>
    <string name="app_name">Achaemenian</string>
    <string name="rate_us">Rate us</string>
    <string name="stories">Stories</string>
    <string name="categories">Categories</string>
    <string name="more">More</string>
    <string name="contact_us">Contact Us</string>
    <string name="random_story">Random Story</string>
    <string name="story_app">Story App</string>
    <string name="home">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="sample_story_title">Sample story title</string>
    <string name = "lorem_ipsume">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae ultrices felis. Proin accumsan condimentum orci, a laoreet augue accumsan sit amet. Quisque at justo pharetra, ultricies lacus id, commodo erat. Nam rhoncus feugiat arcu sed porttitor. Mauris suscipit tristique lorem, in auctor sapien finibus et. Etiam diam sapien, sagittis sit amet dolor a, euismod tincidunt mauris. Maecenas fermentum porta nisl, eget porttitor nulla bibendum in. Donec dictum quam tellus, in feugiat dui imperdiet ac. Sed aliquam, ex eu accumsan egestas, urna quam volutpat tortor, scelerisque cursus lectus odio gravida diam. Proin pellentesque sem sed ultrices commodo. Donec laoreet dapibus magna in dignissim. Donec at nulla quis metus pellentesque feugiat. Aliquam at arcu sit amet sapien pulvinar tempus eu id risus.

Vivamus non congue ex. Nulla facilisi. Nulla facilisi. Integer blandit posuere elementum. Proin bibendum ex massa, sed lobortis nibh sagittis non. Proin eget elementum augue. Suspendisse luctus pulvinar eros non bibendum. Curabitur scelerisque odio nulla, imperdiet viverra lacus consequat quis. Nulla quis vulputate ipsum. Curabitur ullamcorper ante lacus. In hac habitasse platea dictumst. Suspendisse ac lorem eleifend, hendrerit diam vitae, cursus felis. Etiam in nisi dictum, eleifend ex non, dignissim metus. Duis at dapibus ante.

Pellentesque quis dictum arcu. Etiam ipsum lorem, imperdiet ac magna a, hendrerit eleifend felis. Nullam nisl massa, scelerisque vel pulvinar feugiat, lobortis sed metus. Quisque sed commodo justo, eget laoreet justo. Donec ut neque nisi. Praesent interdum lacus eu arcu vehicula, eu iaculis magna molestie. Sed vehicula neque elementum nisl sodales ultrices. Quisque in porttitor est, ac tempus dui.

Maecenas ac eros ipsum. Cras quis facilisis eros. Vivamus non volutpat nunc. Donec consectetur sodales nulla, aliquam aliquam ante pellentesque ut. Suspendisse justo erat, efficitur eget maximus sed, viverra nec lacus. Nunc risus ligula, consectetur quis venenatis in, placerat in urna. Curabitur hendrerit posuere quam vitae imperdiet. Proin at sapien sit amet risus dapibus pellentesque auctor ut leo. Quisque id vestibulum ipsum, at condimentum ante. Aliquam molestie nisi dui, in pretium nunc feugiat in. Sed et lorem sodales, cursus sem in, vehicula ligula. Nam accumsan ante eros, vel auctor risus consectetur quis. Suspendisse scelerisque eros eu tortor ornare, ut gravida metus posuere. Phasellus sit amet pharetra arcu, sit amet bibendum sem. Nunc ultricies at nunc nec semper. Morbi efficitur viverra est, sed placerat est dapibus vel.

Phasellus et turpis convallis, gravida ante non, varius ipsum. Ut vitae mi ornare, dictum dui in, ornare mi. Aliquam fermentum semper sapien eget tincidunt. Etiam ac lacinia turpis, et viverra leo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean sagittis felis eu enim condimentum, quis cursus arcu ultricies. Suspendisse pulvinar leo elit, et vulputate ante gravida eget. Duis fringilla nulla leo, et ullamcorper lorem hendrerit nec. Quisque tempor eros vitae lorem auctor, vitae eleifend eros imperdiet. Duis in felis sit amet leo ornare dapibus.</string>
</resources>