<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />

    <item
        android:title="@string/story_app"
        >
        <menu>
            <item
                android:id="@+id/random"
                android:title="@string/random_story"
                android:icon="@drawable/ic_random"/>
            <item
                android:id="@+id/stories"
                android:title="@string/stories"
                android:icon="@drawable/ic_stories"/>

            <item
                android:id="@+id/cat"
                android:title="@string/categories"
                android:icon="@drawable/ic_category"/>
        </menu>
    </item>

    <item
        android:title="@string/more">
        <menu>
            <item
                android:id="@+id/contact"
                android:title="@string/contact_us"
                android:icon="@drawable/ic_contact" />

            <item
                android:id="@+id/rate"
                android:title="@string/rate_us"
                android:icon="@drawable/ic_rate"/>
        </menu>
    </item>
</menu>